Buttons for different views work, views have no bindings

--- a/Burger_CodingDojo6/MainWindow.xaml
+++ b/Burger_CodingDojo6/MainWindow.xaml
@@ -5,8 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Burger_CodingDojo6"
         mc:Ignorable="d"
+        xmlns:vm ="clr-namespace:Burger_CodingDojo6.ViewModel"
+        xmlns:views="clr-namespace:Burger_CodingDojo6.Views"
+        DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="60"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Orientation="Vertical">
+            <Button  Content="Overview" Margin="5" Command="{Binding OverviewBtnClicked}"/>
+            <Button Content="My Toys"  Margin="5" Command="{Binding MyToysBtnClicked}"/>
+        </StackPanel>
+        <ContentControl Grid.Column="1" Content="{Binding CurrentVm}">
+            <ContentControl.Resources>
+                <DataTemplate DataType="{x:Type vm:OverviewVM}">
+                    <views:OverviewView />
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vm:MyToysVM}">
+                    <views:MyToysView />
+                </DataTemplate>
+            </ContentControl.Resources>
+        </ContentControl>
     </Grid>
 </Window>
